s3_sync/dist/k8s/k8s_s3_sync_ingress_def.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: s3-sync-ingress
  namespace: k8-test-data
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /s3syncapi/?(.*)
        backend:
          serviceName: s3-sync-svc
          servicePort: 5004
